@@ -1,0 +1,11 @@
+{
+  backend =>            'Convos::Core::Backend::File',
+  contact =>            'mailto:perl@localhost',
+  default_server =>     'localhost:1337',
+  forced_irc_server =>  'localhost:1337',
+  invite_code =>        'perl_example',
+  organization_name =>  'Team Perl',
+  plugins =>            {},
+  secure_cookies =>     0,
+  session_secrets =>    ['signed-perl-secret']
+}
